--- a/public/styles.css
+++ b/public/styles.css
@@ -7,7 +7,6 @@ body {
 	font-size: 62.5%;
 	font-family: 'Quicksand', sans-serif;
 	letter-spacing: 1px;
-	word-spacing: normal;
 	margin: 0px;
     padding: 0px;
 	overflow-x: hidden!important;
@@ -16,7 +15,9 @@ body {
 	
 }
 
-
+.justify-text{
+	word-spacing: 10rem;
+}
 
 a {
 	text-decoration: none;
@@ -59,11 +60,12 @@ a:hover {
 
 .email-btn{
 	width: 15rem;
-	height: 5rem;
+	height: 4.2rem;
 	letter-spacing: 1px;
 	background-color: #0A0A1E !important;
 	border: 1px solid #18A0FB;
 	font-size: 2rem;
+	
 	text-align: center;
 
 }
@@ -100,11 +102,11 @@ small{
 }
 
 .hero-text {
-	margin-top: 10rem;
+	margin-top: 15rem;
 }
 
 .hero-text-first{
-	margin-top: 18rem;
+	margin-top: 20rem;
 }
 
 .hero-text-second{
@@ -180,7 +182,7 @@ small{
 	}
 
 	.hero-text-second{
-		margin-top: 4rem;
+		margin-top: 20rem;
 	}
 	
 	.sub-heading{
@@ -223,7 +225,7 @@ small{
 	}
 
 	.hero-text-first{
-		margin-top: 12.0rem;
+		margin-top: 20.0rem;
 	}
 }
 
